--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.23.5",
+    "axios": "^1.1.2",
     "bulma": "^0.9.4",
     "node-sass": "^7.0.3",
     "react": "^16.10.2",
