--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
   db:
     image: 'postgres:13.1-alpine'
-    container_name: laukbook_db
+    container_name: backend_db
     ports:
       - 5431:5432
     environment:
